--- a/style.css
+++ b/style.css
@@ -2,23 +2,26 @@ body{
 font-family: 'Montserrat', sans-serif;
 margin: 0;
 background-color: black;
-color: aliceblue;
+color: #fff;
 overflow: hidden;
 }
 .main{
     display: flex;
     height: 100vh;
+    padding: 0.5rem;
 }
 .sidebar{
-    background-color: #000;
-    width: 350px;
+    background-color: black;
+    width: 340px;
     border-radius: 1rem; /* 1rem equal 16px */
+    margin: 0.25rem;
 }
 .main-content{
     background-color: #121212; 
     flex: 1;
     border-radius: 1rem;
-    overflow: auto;
+    overflow: scroll;
+    /* padding: 0 1.5rem 0 1.5rem; */
 }
 
 .music-player{
@@ -28,32 +31,296 @@ overflow: hidden;
     width: 100%;
     height: 72px;
 }
+a{
+    color: #fff;
+}
 
 .nav{
     background-color: #121212;
     border-radius: 1rem;
-    margin: 5px;
+    margin: 0.25rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 100px;
-    padding: 0.5rem;
+    padding: 0.5rem 0.75rem;
 
 }
 
 .nav-option{
-
+    line-height: 2.5rem;
+    margin-left: 10px;
     
 }
-/* .home{
-    
-    margin: 12px;
-    padding: 10px;
-    
+
+.nav-option i{
+    font-size: 1.25rem;
+}
+
+.nav-option a{
+    font-size: 1rem;
+    margin-left: 1rem;
+}
+.nav-option{
+    opacity: 0.6;
+}
+.nav-option:hover{
+    opacity: 1.5;
 }
 .library{
+    background-color: #121212;
+    border-radius: 1rem;
+    height: 100%;
+    margin: 0.25rem;
+    padding: 0.5rem 0.75rem;
+    overflow: scroll;
+
+}
+
+.options{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.lib-options img{
+    height: 1.25rem;
+    width: 1.25rem;
     
-    margin: 12px;
-    padding: 10px;
+}
+.lib-options{
+    /* width: 80%; */
+    line-height: 2.5rem;
+    margin-left: 5px;
+    align-items: center;
+}
+.icons{
+    font-size: 1.25rem;
+    display: flex;
+}
+.icons i{
+    margin: 1rem;
+    opacity: 0.7;
     
-} */
+}
+.icons i:hover{
+    opacity: 1;
+}
+
+.box{
+    height: 9rem;
+    background-color: #232323;
+    border-radius: 0.75rem;
+    margin: 0.75rem 0 1rem 0;
+    padding: 0.75rem 1rem;
+}
+.box-p1{
+    font-size: 1rem;
+    font-weight: 500;
+}
+.box-p2{
+    font-size: 0.85rem;
+    opacity: 0.9;
+}
+.badge{
+    background-color: #fff;
+    border: none;
+    border-radius: 100px;
+    padding: 0.25rem 1rem;
+    font-weight: 700;
+    margin-top: 0.5rem;
+    height: 2rem;
+    width: fit-content;
+}
+.sticky-nav{
+    position: sticky;
+    top: 0px;
+    display: flex;
+    background-color: #121212;
+    padding: 1rem 0 0 1rem;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 5;
+    /* background-color: #232323; */
+}
+.install{
+    background-color: black;
+    color: #fff;
+}
+.sticky-nav-icons img{
+    margin: 0.5rem;
+    /* height: 1rem;
+    width: 1rem; */
+
+}
+.sticky-nav-options i{
+    margin-right: 1.25rem;
+    padding: 0 0 2px;
+    font-size: 1.4rem;
+
+}
+.sticky-nav-options{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sticky-nav-options button{
+    margin-right: 1.5rem;
+    
+}
+@media (max-width: 1024px){
+    .hide{
+        display: none;
+    }
+}
+.cards{
+    padding: 0 1.5rem 0 1.5rem;
+}
+.card{
+    background-color: #1d1c1c;
+    width: 150px;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    margin-left: 1.5rem;
+    margin-top: 1rem;
+}
+.card:hover{
+    background-color: #232323;
+}
+.cards-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.card-img{
+    width: 150px;
+    border-radius: 0.5rem;
+}
+.card-title{
+    font-weight: 600;
+    font-size: 1rem;
+}
+.card-info{
+    font-size: 0.85rem;
+    opacity: 0.75;
+}
+
+.music-player{
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
+}
+.album{
+    width: 30%;
+}
+.player{
+    width: 40%;
+}
+.controls{
+    width: 30%;
+}
+.player-controls{
+    /* background-color: aqua; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+}
+.playback-bar{
+    /* background-color: antiquewhite; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+}
+.player-control-icon{
+    height: 1rem;
+    margin: 0 0.75rem 0 0.75rem;
+    opacity: 0.75;
+    
+}
+.player-control-icon:hover{
+    opacity: 1;
+}
+.play-icon:hover{
+    transform: scale(1.25);
+}
+.progress-bar{
+    width: 50%;
+    appearance: none;
+    cursor: pointer;
+    border-radius: 300px;
+    
+}
+.progress-bar:hover{
+    width: 80%;
+}
+.progress-bar::-webkit-slider-runnable-track{
+    border-radius: 100px;
+    height: 0.25rem;
+    background-color: #ddd;
+    
+}
+.progress-bar::-webkit-slider-thumb{
+    appearance: none;
+    height: 1rem;
+    width: 1rem;
+    background-color: rgb(70, 188, 70);
+    border-radius: 50%;
+    margin-top: -0.3rem;
+}
+.album{
+    display: flex;
+
+}
+.img-album{
+    width: 4rem;
+    border-radius: 0.25rem;
+}
+.album-picture{
+    width: 20%;
+}
+.album-text{
+    width: 35%;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+.album-like{
+    width: 20%;
+    
+}
+.album-text p{
+    margin-top: -0.5rem;
+    margin-left: 1rem;
+    font-size: 0.75rem;
+    opacity: 0.7;
+}
+.album-text p:hover{
+    text-decoration: underline;
+    cursor: default;
+    opacity: 1;
+    transform: scale(1.1);
+}
+.album-like{
+    margin-top: 1rem;
+    margin-left: 0;
+}
+.fa-regular{
+    opacity: 0.75;
+}
+.fa-regular:hover{
+    opacity: 1;
+    transform: scale(1.5);
+    
+    
+}
+.controls{
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    
+    
+}
+.controls i{
+    margin-left: 0.75rem;
+}
